# terminales

./: .stylelintrc.json  Makefile  README.md  pyproject.toml
.github/workflows/: deploy.yaml  styles.yml  tests.yaml
base/: views.py
blog/: models.py
blog/migrations/: 0001_initial.py
blog/templates/blog/: blog_index_page.html  blog_page.html
home/migrations/: 0003_homepage_body.py
home/templates/home/: home_page.html
main/: context_processors.py  gunicorn.conf.py  settings.py  urls.py  wsgi.py
search/templates/search/: search.html
templates/: 404.html  500.html  base.html  libro.html  robots.txt  servicio.html  styleguide.html
templates/includes/: footer.html  navigation.html
